jsx fix för package.json för index

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "niborium-skapa-dokument",
   "version": "1.0.0",
   "description": "Skapa dokument enkelt via denna React applikation och exportera dokument som pdf",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html --open",
